# grug

./: .gitignore  README.md  manifesto.py  pyproject.toml
grug_coder/: Untitled-1.ipynb  below_zero.py  below_zero.txt  extract_tests.py  filter_by_substring.txt  intersperse.py  intersperse.txt  main.py  mean_absolute_deviation.py  mean_absolute_deviation.txt  parse_nested_parens.py  parse_nested_parens.txt  plan.md  response.json  rolling_max.py  rolling_max.txt  separate_paren_groups.py  separate_paren_groups.txt  sum_product.py  sum_product.txt  test_below_zero.py  test_filter_by_substring.py  test_ground_truth_has_close_elements.py  test_intersperse.py  test_mean_absolute_deviation.py  test_parse_nested_parens.py  test_rolling_max.py  test_separate_paren_groups.py  test_sum_product.py  test_truncate_number.py  testing.py  truncate_number.txt
solutions/: below_zero.py  below_zero.txt  filter_by_substring.txt  has_close_elements.py  has_close_elements.txt  intersperse.py  intersperse.txt  mean_absolute_deviation.py  mean_absolute_deviation.txt  parse_nested_parens.py  parse_nested_parens.txt  rolling_max.py  rolling_max.txt  separate_paren_groups.py  separate_paren_groups.txt  sum_product.py  sum_product.txt  test_below_zero.py  test_filter_by_substring.py  test_has_close_elements.py  test_intersperse.py  test_mean_absolute_deviation.py  test_parse_nested_parens.py  test_rolling_max.py  test_separate_paren_groups.py  test_sum_product.py  test_truncate_number.py  truncate_number.py  truncate_number.txt
tests/: test_code_generator.py  test_hello_world.py
(+19 files in other folders)
