[tool.poetry]
name = "grug-coder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "grug_coder"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
pytest = "^7.3.1"
hypothesis = "^6.78.0"
responses = "^0.23.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
